# xtokenizer

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  build-pypi-linux.sh  build_and_run.sh  kmpkg-configuration.json  kmpkg.json  release-pypi-linux.sh  setup.py
benchmark/: config.h.in
cmake/: cargo.cmake  xtokenizer_config.cmake.in  xtokenizer_cpack_config.cmake  xtokenizer_cxx_config.cmake  xtokenizer_deps.cmake  xtokenizer_test.cmake
examples/: CMakeLists.txt  example.cc  foo_ex.cc
kmcmake/: kmcmake_module.cmake  kmcmake_option.cmake
kmcmake/package/: CPack.STGZ_Header.sh.in
kmcmake/tools/: default_setting.cmake  git_commit.cmake  kmcmake_cc_benchmark.cmake  kmcmake_cc_binary.cmake  kmcmake_cc_interface.cmake  kmcmake_cc_library.cmake  kmcmake_cc_object.cmake  kmcmake_cc_proto.cmake  kmcmake_cc_test.cmake  simd_detect.cmake
tests/: CMakeLists.txt  args_test.cc  config.h.in  foo_doctest.cc  foo_test.cc  pass_test.cc  raw_test.cc
xtokenizer/: CMakeLists.txt  api.h  foo.cc  foo.h  hg_tokenizers.h  huggingface.cc  huggingface.h  main.cc  sentencepiece.cc  sentencepiece.h  tokenizer.cc  tokenizer.h  version.h.in
xtokenizer/rust/: Cargo.toml
